--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,9 @@
     tools:context=".fragment.HomeFragment">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#CAC5D6">
@@ -16,13 +18,15 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@android:color/holo_blue_bright"
-            app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+            app:layout_constraintTop_toTopOf="parent">
+
+        </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constr"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="-26dp"
-            tools:layout_editor_absoluteY="0dp">
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/top_title"
@@ -57,7 +61,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@color/colorPrimaryDark" />
+                        android:src="@color/colorPrimaryDark"
+                        tools:layout_editor_absoluteX="0dp"
+                        tools:layout_editor_absoluteY="0dp" />
 
                     <TextView
                         android:id="@+id/top_food_name"
@@ -92,6 +98,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="20dp"
+                app:cardCornerRadius="10dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/country"
                 app:layout_constraintTop_toBottomOf="@id/get_meal_by">
@@ -116,7 +123,7 @@
                         android:fontFamily="@font/abrilfatface"
                         android:text="Fist"
                         android:textColor="@android:color/holo_blue_light"
-                        android:textSize="25dp" />
+                        android:textSize="18dp" />
                 </LinearLayout>
 
 
@@ -126,6 +133,7 @@
                 android:id="@+id/country"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                app:cardCornerRadius="10dp"
                 app:layout_constraintBottom_toBottomOf="@+id/fist"
                 app:layout_constraintLeft_toRightOf="@id/fist"
                 app:layout_constraintRight_toLeftOf="@id/ingredent">
@@ -150,7 +158,7 @@
                         android:fontFamily="@font/abrilfatface"
                         android:text="Country"
                         android:textColor="@android:color/holo_blue_light"
-                        android:textSize="25dp" />
+                        android:textSize="18dp" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -159,6 +167,7 @@
                 android:id="@+id/ingredent"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                app:cardCornerRadius="10dp"
                 app:layout_constraintBottom_toBottomOf="@id/fist"
                 app:layout_constraintLeft_toRightOf="@id/country"
                 app:layout_constraintRight_toRightOf="parent">
@@ -183,23 +192,27 @@
                         android:fontFamily="@font/abrilfatface"
                         android:text="Ingredent"
                         android:textColor="@android:color/holo_blue_light"
-                        android:textSize="25dp" />
+                        android:textSize="18dp" />
                 </LinearLayout>
 
 
 
             </androidx.cardview.widget.CardView>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview_home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/fist"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="30dp">
 
-        </androidx.recyclerview.widget.RecyclerView>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerview_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintVertical_bias="0.0001"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="30dp"
+                app:layout_constraintTop_toBottomOf="@id/constr">
+
+            </androidx.recyclerview.widget.RecyclerView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
